src/test/resources/failing/fail59.pnd
foo(1,2)
t1(x, c) <- c = count(x) { foo(x,_) }